[package]
name = "dozer-sink-clickhouse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-core = { path = "../dozer-core" }
dozer-types = { path = "../dozer-types" }
clickhouse-rs = { git = "https://github.com/suharev7/clickhouse-rs" }
either = "1.10.0"
chrono-tz = "0.8.6"
serde = "1.0.197"
