[package]
name = "dozer-sink-clickhouse"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-core = { path = "../dozer-core" }
dozer-types = { path = "../dozer-types" }
clickhouse-rs = { git = "https://github.com/getdozer/clickhouse-rs" }
either = "1.10.0"
chrono-tz = "0.8.6"
serde = "1.0.197"
