[package]
name = "dozer-sink-oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-core = { version = "0.3.0", path = "../dozer-core" }
dozer-log = { version = "0.3.0", path = "../dozer-log" }
dozer-recordstore = { version = "0.3.0", path = "../dozer-recordstore" }
dozer-types = { version = "0.3.0", path = "../dozer-types" }
oracle = "0.5.7"
