[package]
name = "dozer-sinks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-sinks-snowflake = { path = "./snowflake", optional = true }
dozer-sinks-bigquery = { path = "./bigquery" }

[features]
snowflake = ["dep:dozer-sinks-snowflake"]
