[package]
name = "dozer-sql"
version = "0.1.39"
edition = "2021"
authors = ["getdozer/dozer-dev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-types = {path = "../dozer-types"}
dozer-storage = {path = "../dozer-storage"}
dozer-core = {path = "../dozer-core"}
dozer-tracing = {path = "../dozer-tracing"}

ahash = "0.8.3"
enum_dispatch = "0.3.11"
jsonpath-rust = "0.3.1"
like = "0.3.1"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
metrics = "0.21.0"
multimap = "0.8.3"
num-traits = "0.2.15"
pest = "2.6.0"
pest_derive = "2.5.6"
regex = "1.8.1"
sqlparser = {git = "https://github.com/getdozer/sqlparser-rs.git" }
uuid = {version = "1.3.0", features = ["v1", "v4", "fast-rng"]}
bigdecimal = { version = "0.3", features = ["serde"], optional = true }
ort = { version = "1.15.2", optional = true }
ndarray = { version = "0.15", optional = true }
half = { version = "2.3.1", optional = true }

[dev-dependencies]
tempdir = "0.3.7"
proptest = "1.2.0"
tokio = { version = "1", features = ["rt", "macros"] }

[features]
python = ["dozer-types/python-auto-initialize"]
bigdecimal = ["dep:bigdecimal", "sqlparser/bigdecimal"]
onnx = ["dep:ort", "dep:ndarray", "dep:half"]
