[package]
name = "dozer-sql"
version = "0.1.39"
edition = "2021"
authors = ["getdozer/dozer-dev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-types = { path = "../dozer-types" }
dozer-storage = { path = "../dozer-storage" }
dozer-core = { path = "../dozer-core" }
dozer-tracing = { path = "../dozer-tracing" }
dozer-sql-expression = { path = "expression" }
dozer-recordstore = {path = "../dozer-recordstore"}

ahash = "0.8.3"
enum_dispatch = "0.3.12"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
metrics = "0.21.0"
multimap = "0.9.0"
regex = "1.10.2"

[dev-dependencies]
tempdir = "0.3.7"
proptest = "1.2.0"
tokio = { version = "1", features = ["rt", "macros"] }

[features]
python = ["dozer-sql-expression/python"]
onnx = ["dozer-sql-expression/onnx"]
