[package]
name = "dozer-sql"
version = "0.4.0"
edition = "2021"
authors = ["getdozer/dozer-dev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-types = { path = "../dozer-types" }
dozer-core = { path = "../dozer-core" }
dozer-tracing = { path = "../dozer-tracing" }
dozer-sql-expression = { path = "expression" }

ahash = "0.8.3"
bincode = { workspace = true }
enum_dispatch = "0.3.12"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
metrics = "0.21.0"
multimap = "0.9.0"
regex = "1.10.2"
tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
proptest = "1.3.1"

[features]
python = ["dozer-sql-expression/python"]
onnx = ["dozer-sql-expression/onnx"]
javascript = ["dozer-sql-expression/javascript"]
