[package]
name = "dozer-storage"
version = "0.1.10"
edition = "2021"
authors = [
    "Matteo Pelati <matteo@getdozer.io>",
    "Vivek Gudapuri <vivek@getdozer.io>",
    "Dario Pizzamiglio <dario@getdozer.io",
    "Thu Duong <thu@getdozer.io>",
    "Karolis Gudiškis <karolis@getdozer.io>",
    "Chloe Kim <chloe@getdozer.io>",
    "Bei Chu <bei@getdozer.io>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-types = { path = "../dozer-types" }
lmdb-rkv = "0.14.0"
lmdb-rkv-sys = "0.11.2"

[dev-dependencies]
tempdir = "0.3.7"
