[package]
name = "dozer-storage"
version = "0.1.33"
edition = "2021"
authors = ["getdozer/dozer-dev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-types = { path = "../dozer-types" }

lmdb-rkv = "0.14.0"
lmdb-rkv-sys = "0.11.2"
page_size = "0.5.0"
pin-project = "1.1.0"
tokio = "1.28.2"

[dev-dependencies]
tempdir = "0.3.7"
