[package]
name = "dozer-tests"
version = "0.1.39"
edition = "2021"
authors = ["getdozer/dozer-dev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dozer-tests"
path = "src/dozer_tests.rs"

[[bin]]
name = "dozer-test-client"
path = "src/dozer_test_client.rs"

[[test]]
harness = false
name = "sql-tests"
path = "src/sql_tests/logic_test.rs"

[dependencies]
dozer-types = { path = "../dozer-types" }
dozer-api = { path = "../dozer-api" }
dozer-utils = { path = "../dozer-utils" }
dozer-cli = { path = "../dozer-cli" }
dozer-tracing = { path = "../dozer-tracing" }
dozer-recordstore = { path = "../dozer-recordstore" }

reqwest = { version = "0.11.20", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.25.0", features = ["full", "rt"] }
bson = { version = "2.7.0", optional = true }
mongodb = { version = "2.6.1", optional = true }
futures = { version = "0.3.26", optional = true }
env_logger = "0.10.0"
clap = { version = "4.4.1", features = ["derive"] }
rusqlite = { version = "0.28.0", features = ["bundled", "column_decltype", "hooks"] }
async-trait = "0.1.53"
dozer-core = { path = "../dozer-core" }
dozer-sql = { path = "../dozer-sql" }
tempdir = "0.3.7"
walkdir = "2.3.2"
multimap = "0.9.0"
ahash = "0.8.3"
csv = "1.2"
url = "2.4.1"
crossbeam = "0.8.2"

[dev-dependencies]
dozer-core = { path = "../dozer-core" }
dozer-sql = { path = "../dozer-sql" }
dozer-cache = { path = "../dozer-cache" }

sqlparser = {git = "https://github.com/getdozer/sqlparser-rs.git" }
rusqlite = { version = "0.28.0", features = ["bundled", "column_decltype"] }
csv = "1.2"
tempdir = "0.3.7"
sqllogictest = "0.17.0"
libtest-mimic = "0.6.1"

[features]
mongodb = ["dep:bson", "dep:mongodb", "dep:futures"]
python=["dozer-sql/python"]
