[package]
name = "dozer-tests"
version = "0.3.0"
edition = "2021"
authors = ["getdozer/dozer-dev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
harness = false
name = "sql-tests"
path = "src/sql_tests/logic_test.rs"

[dev-dependencies]
dozer-types = { path = "../dozer-types" }
dozer-tracing = { path = "../dozer-tracing" }
dozer-recordstore = { path = "../dozer-recordstore" }
dozer-core = { path = "../dozer-core" }
dozer-sql = { path = "../dozer-sql" }

tokio = { version = "1.25.0", features = ["full", "rt"] }
futures = { version = "0.3.28" }
env_logger = "0.10.0"
clap = { version = "4.4.1", features = ["derive"] }
rusqlite = { version = "0.29.0", features = [
    "bundled",
    "column_decltype",
    "hooks",
] }
async-trait = "0.1.74"
tempdir = "0.3.7"
walkdir = "2.4.0"
ahash = "0.8.3"
csv = "1.2"
url = "2.4.1"
crossbeam = "0.8.2"

sqlparser = { git = "https://github.com/getdozer/sqlparser-rs.git" }
sqllogictest = "0.17.1"
libtest-mimic = "0.6.1"

[features]
python = ["dozer-sql/python"]
