[package]
name = "dozer-tracing"
version = "0.1.35"
edition = "2021"
authors = ["getdozer/dozer-dev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-types = { path = "../dozer-types" }

tracing-subscriber = {version = "0.3.17", features=["env-filter", "tracing-log"]}
opentelemetry = { version = "0.20.0", features = ["rt-tokio", "rt-tokio-current-thread"] }
tracing-opentelemetry = "0.20.0"
tokio = { version = "1", features = ["full"] }
metrics-exporter-prometheus = "0.12.1"
atty = "0.2.14"
opentelemetry-otlp = "0.13.0"
