[package]
name = "dozer-tracing"
version = "0.4.0"
edition = "2021"
authors = ["getdozer/dozer-dev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-types = { path = "../dozer-types" }

tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "tracing-log",
] }

tracing-opentelemetry = "0.23.0"
tokio = { version = "1", features = ["full"] }
atty = "0.2.14"
opentelemetry = { version = "0.22.0", features = ["metrics", "otel_unstable"] }
opentelemetry-otlp = "0.15.0"
opentelemetry-aws = "0.10.0"
opentelemetry_sdk = { version = "0.22.0", features = ["metrics", "rt-tokio"] }
opentelemetry-prometheus = { version = "0.15.0" }
prometheus = "0.13"
console-subscriber = { version = "0.2.0", optional = true }
futures-util = "0.3.28"
once_cell = "1.19.0"
crossbeam = "0.8.4"
parking_lot = "0.12"
hyper = { version = "0.14", default-features = false }
[features]
tokio-console = ["tokio/tracing", "console-subscriber"]
