[package]
name = "dozer-types"
version = "0.3.0"
authors = ["getdozer/dozer-dev"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.189", features = ["derive", "rc"] }
serde_json = { version = "1.0.108", features = ["arbitrary_precision"] }
ijson = "0.1.3"
rust_decimal = { version = "1.32", features = ["serde-str", "db-postgres"] }
bincode = { workspace = true, features = ["serde"] }
ahash = "0.8.3"
thiserror = "1.0.48"
parking_lot = "0.12"
bytes = "1.4.0"
indexmap = "2.0.0"
ordered-float = { version = "3.9.1", features = ["serde"] }
tracing = "0.1.36"
log = "0.4.17"
serde_yaml = "0.9.25"
prettytable-rs = "0.10.0"
indicatif = "0.17.3"
geo = { version = "0.26.0", features = ["use-serde"] }
pyo3 = { version = "0.18.1", optional = true }
tonic = { version = "0.10.0" }
prost-types = "0.12.0"
prost = "0.12.0"
arrow = { version = "47.0.0" }
arrow-cast = { version = "47.0.0" }
arrow-schema = { version = "47.0.0", features = ["serde"] }
tokio-postgres = { version = "0.7.7", features = [
    "with-chrono-0_4",
    "with-geo-types-0_7",
    "with-uuid-1",
] }
serde_bytes = "0.11.12"
arbitrary = { version = "1", features = ["derive"], optional = true }
schemars = "0.8.15"
rmp-serde = "1.1.2"

[build-dependencies]
tonic-build = "0.10.0"

[features]
python-extension-module = ["dep:pyo3", "pyo3?/extension-module"]
python-auto-initialize = ["dep:pyo3", "pyo3?/auto-initialize"]
arbitrary = ["dep:arbitrary", "chrono/arbitrary", "rust_decimal/rust-fuzz"]
