[package]
name = "mysql-connector"
version = "8.0"
edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kafka = "0.9"
mysql-async = "0.20"
mysql_cdc = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"