[package]
name = "dozer-ingestion-aerospike"
version = "0.4.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-ingestion-connector = { path = "../connector" }
actix-web = "4.5.1"
base64 = "0.21.7"
dozer-sink-aerospike = { path = "../../dozer-sink-aerospike" }
