[package]
name = "dozer-ingestion-connector"
version = "0.4.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-types = { path = "../../dozer-types" }
futures = "0.3.28"
tokio = "1.32.0"
